--- a/etc/spack/defaults/modules.yaml
+++ b/etc/spack/defaults/modules.yaml
@@ -16,6 +16,9 @@
 modules:
   enable:
     - tcl
+  tcl:
+    projections:
+      all: '{name}/{version}-{compiler.name}-{compiler.version}'
   prefix_inspections:
     bin:
       - PATH
@@ -43,7 +46,3 @@ modules:
       - PKG_CONFIG_PATH
     '':
       - CMAKE_PREFIX_PATH
-
-  lmod:
-    hierarchy:
-      - mpi
