--- a/etc/spack/defaults/packages.yaml
+++ b/etc/spack/defaults/packages.yaml
@@ -14,12 +14,59 @@
 #   ~/.spack/packages.yaml
 # -------------------------------------------------------------------------
 packages:
+  python:
+    externals:
+    - spec: python@2.7.5 arch=linux-centos7-zen2
+      prefix: /usr
+    buildable: False
+  openblas:
+    externals:
+    - spec: openblas@system arch=linux-rhel7-power9le
+      prefix: /usr/lib64/
+    - spec: openblas@system arch=linux-centos7-broadwell
+      prefix: /usr/lib64/
+    buildable: False
+  cuda:
+    externals:
+    - spec: cuda@11.1.105 arch=linux-centos7-zen2
+      modules:
+        - cuda/11.1
+      prefix: /share/apps/cuda/11.1/
+    #- spec: cuda@10.2.89 arch=linux-rhel7-power9le
+    #  prefix: /share/apps/cuda/10.2.89
+    #  modules:
+    #    - cuda/10.2.89
+    - spec: cuda@10.1.243 arch=linux-centos7-zen2
+      prefix: /share/apps/cuda/10.1.243/
+    - spec: cuda@10.1.243 arch=linux-centos7-broadwell
+      prefix: /share/apps/cuda/10.1.243/
+    buildable: False
+  cmake:
+    externals:
+    - spec: cmake@3.16.4 arch=linux-rhel7-power9le
+      prefix: /share/apps/cmake/3.16.4
+    - spec: cmake@2.8.12.2 arch=linux-rhel7-power9le
+      prefix: /usr
+    - spec: cmake@3.17.2 arch=linux-rhel7-power9le
+      prefix: /share/apps/cmake/3.17.2
+    buildable: False
+  openmpi:
+    externals:
+    - spec: openmpi@3.1.3%gcc@7.4.0~cuda~cxx~cxx_exceptions~java~memchecker+pmi~sqlite3~static~thread_multiple~wrapper-rpath
+        schedulers=slurm arch=linux-rhel7-power9le
+      prefix: /share/apps/openmpi/3.1.3/gcc/7.4.0
+    - spec: openmpi@3.1.5%gcc@7.4.0~cuda~cxx~cxx_exceptions~java~memchecker+pmi~sqlite3~static~thread_multiple~wrapper-rpath
+        fabrics=ucx schedulers=slurm arch=linux-rhel7-power9le
+      prefix: /share/apps/openmpi/3.1.5/gcc/7.4.0
+    - spec: openmpi@3.1.3%gcc@7.3.0 schedulers=slurm arch=linux-centos7-broadwell
+      prefix: /share/apps/openmpi/3.1.3/gcc/7.3.0
+    buildable: False
   all:
     compiler: [gcc, intel, pgi, clang, xl, nag, fj, aocc]
     providers:
       D: [ldc]
       awk: [gawk]
-      blas: [openblas, amdblis]
+      blas: [openblas, amdblis, blis]
       daal: [intel-daal]
       elf: [elfutils]
       fftw-api: [fftw, amdfftw]
